compiler/typ/tests/fixtures/diagnostics/0062_core_and_int_06.ml.infer.expected
File "0062_core_and_int_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0062_core_and_int_06 is not a valid module name.

File "0062_core_and_int_06.ml", line 2, characters 17-18:
2 | let _ = (true && 0, false)
                     ^
Error: The constant 0 has type int but an expression was expected of type
         bool
